# teams-os

./: readme.md
chat-client/: .env  .env.example  .gitignore  package-lock.json  package.json
chat-client/src/app/: globals.css  layout.js  page.js
chat-client/src/app/login/: page.js
chat-client/src/app/mobile_chat_list/: page.js
chat-client/src/app/register/: page.js
chat-client/src/app/unauthorized/: page.js
chat-client/src/components/: EditRoom.js  EmojiIcon.js  RoomList.js  SettingsIcon.js
chat-client/src/models/: User.js
chat-client/src/pages/api/auth/: [...nextauth].js  getSession.js  signup.js  update.js
chat-client/src/pages/api/users/: db.js
chat-client/src/utils/: ChatStore.js  db.js
chat-server/: .env  .gitignore  Cargo.toml
chat-server/src/: lib.rs  main.rs  tests.rs
chat-server/src/api_routes/: mod.rs
chat-server/src/api_routes/message_api/: mod.rs
chat-server/src/chat/: mod.rs
chat-server/src/chat_state_dao/: mod.rs
chat-server/static/: script.js
