[package]
name = "rocket_chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["secrets", "json"] }
rocket_contrib = "0.4.11"
ws = { package = "rocket_ws", version = "0.1.0" }
serde = "1.0.197"
rand = "0.8.5"

[dev-dependencies]
rand = "0.8.5"