[package]
name = "friends_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
rocket_contrib = "0.4.11"
rocket_cors = { version = "0.6.0", default-features = false }
ws = { package = "rocket_ws", version = "0.1.0" }
bson = "2.9.0"
dotenv = "0.15"
serde = "1.0.197"
rand = "0.8.5"
num_threads = "0.1.7"
tokio = "1.36.0"
chrono = "0.4.35"

[dependencies.mongodb]
version = "2.8.0"
default-features = false
features = ["sync"]

[dev-dependencies]
rand = "0.8.5"